# geometry_poc

./: .pre-commit-config.yaml  HaifaSea.kml  README.md  pyproject.toml
docs/: Haifa Sea With Tests Points.kml
src/: fastkml_poc.py  shapely_poc.py  test_fastkml_poc.py
src/fastkml_poc/: __init__.py  fastkml_poc.py  static_dtm.py
src/static_dtm/: __init__.py  kml_utils.py  polygon_utils.py  static_dtm.py
tests/: conftest.py  test_fastkml_poc.py  test_static_dtm.py
