[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "static_dtm"
version = "0.0.1"
authors = [
  { name="Ben Sembira", email="classified@classified.classified" },
]
description = "A custom DTM object that returns a constant value in a certain polygon"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "fastkml",
  "lxml",
  "shapely",
  "pyproj",
  "pytest",
]

[project.urls]
Homepage = "https://github.com/ben-sembira-1/geometry_poc"
Issues = "https://github.com/ben-sembira-1/geometry_poc/issues"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
